tests/compile_errors/021-fiber-error-location.buzz
//:7:37
import "std";

fun count(n: int) > str *> int? {
    for (i: int = 0; i < n; i = i + 1) {
    	if (i == 2) {
            throw "an error occured";
        }
        _ = yield i;
    }

    return "Counting is done!";
}

fun run() > void {
    final counter = &count(10);
    
    var sum = 0;
    while (!counter.over()) {
        sum = sum + resume counter ?? 0;
    }

    std\print(resolve counter);
}

test "fiber error location" {
    run();
}
